# TanksServer

./: .gitignore  CMakeLists.txt  Makefile.Debug  Makefile.Release  archive.h  bullet.cpp  bullet.h  bulletmodule.cpp  bulletmodule.h  channel.cpp  collision_up.cpp  collision_up.h  conanbuildinfo.pri  conanfile.txt  container.cpp  container.h  entity.cpp  entity.h  game.cpp  game.h  game_map.cpp  game_map.h  gamesignal.h  main.cpp  map.cpp  map.h  map.txt  module.h  moveble.cpp  moveble.h  object.h  objectinterface.cpp  objectinterface.h  out.h  player_controller.cpp  playermodule.cpp  playermodule.h  request_sketch  server.cpp  server.h  (+9 more)
Core/: CMakeLists.txt  archive.h  collision.cpp  collision.h  collision_visualizer.cpp  collision_visualizer.h  container.cpp  container.h  gamesignal.h  mvector.cpp  mvector.h  object.cpp  object.h  objectinterface.h  out.h  shapes.cpp
Core.dir/MinSizeRel/: Core.lib.recipe
Modules/: CMakeLists.txt  beaconmodule.cpp  beaconmodule.h  bulletmodule.cpp  bulletmodule.h  game.cpp  game.h  map.cpp  map.h  module.cpp  module.h  moduleinterface.cpp  moduleinterface.h  player_controller.cpp  player_controller.h  playermodule.cpp  playermodule.h  texturesmodule.cpp  texturesmodule.h
Objects/: CMakeLists.txt  bullet.cpp  bullet.h  collider.cpp  collider.h  rectobject.cpp  rectobject.h  tank.cpp  tank.h
PoligonViewer/: CMakeLists.txt  collision_visualizer.cpp  collision_visualizer.h
Server.dir/MinSizeRel/: Server.exe.recipe
collisions/: collision.h  container.cpp  container.h
debug_tools/: collision_visualizer.cpp  collision_visualizer.h  out.h
math/: shapes.cpp  shapes.h
math_tools/: collision.cpp  collision.h  mvector.h  rect.cpp  rect.h  shapes.cpp  shapes.h  vector2f.h
modules/: CMakeLists.txt  beaconmodule.h  bulletmodule.cpp  bulletmodule.h  game.cpp  game.h  gamesignal.h  map.cpp  map.h  module.h  moduleinterface.cpp  moduleinterface.h  player_controller.cpp  player_controller.h  playermodule.cpp  playermodule.h
net/: archive.h  channel.cpp  channel.h  player_controller.cpp  player_controller.h  server.cpp  server.h
objects/: CMakeLists.txt  bullet.cpp  bullet.h  collider.cpp  collider.h  object.h  tank.cpp  tank.h
